@@ -54,7 +54,7 @@
 static pthread_mutex_t init_lock = PTHREAD_MUTEX_INITIALIZER;
 
 typedef struct {
-	int (*init)(void);
+	int (*init)(bool become_user);
 	int (*fini)(void);
 	int (*auth)(on_http_request_args_t *args, rest_auth_context_t *ctxt);
 	void *(*db_conn)(rest_auth_context_t *context);
@@ -113,7 +113,8 @@ extern void destroy_rest_auth(void)
 	slurm_mutex_unlock(&init_lock);
 }
 
-extern int init_rest_auth(const plugin_handle_t *plugin_handles,
+extern int init_rest_auth(bool become_user,
+			  const plugin_handle_t *plugin_handles,
 			  const size_t plugin_count)
 {
 	int rc = SLURM_SUCCESS;
@@ -153,7 +154,7 @@ extern int init_rest_auth(const plugin_handle_t *plugin_handles,
 			debug5("%s: found plugin_id: %u",
 			       __func__, plugin_ids[g_context_cnt]);
 
-		(*(ops[g_context_cnt].init))();
+		(*(ops[g_context_cnt].init))(become_user);
 		g_context_cnt++;
 	}
 
