@@ -99,9 +99,12 @@ extern void *rest_auth_g_get_db_conn(rest_auth_context_t *context);
 /*
  * Setup locks and register REST authentication plugins.
  * 	Only call once!
- * IN type auth type to enforce
+ * IN become_user - notify auth plugin user requests become user mode
+ * IN plugin_handles - array of rest_plugins to init
+ * IN plugin_count - number of plugins in plugin_handles array
  */
-extern int init_rest_auth(const plugin_handle_t *plugin_handles,
+extern int init_rest_auth(bool become_user,
+			  const plugin_handle_t *plugin_handles,
 			  const size_t plugin_count);
 
 /*
